Bug 1114681 - Fetch runtime app source code. r=jryans

--- a/devtools/client/webide/content/details.xhtml
+++ b/devtools/client/webide/content/details.xhtml
@@ -45,6 +45,7 @@
       <p id="manifestURL"></p>
 
       <button id="prePackageLog" onclick="showPrepackageLog()" hidden="true">&details_showPrepackageLog_button;</button>
+      <button id="fetchButton" hidden="true">&details_fetch;</button>
     </main>
 
     <ul class="validation_messages" id="errorslist"></ul>
