--- a/devtools/shared/apps/tests/test_webapps_actor.html
+++ b/devtools/shared/apps/tests/test_webapps_actor.html
@@ -322,7 +322,7 @@ var steps = [
     installTestApp(url, appId,
       function (aResponse, aApp) {
         ok(true, "Installed redirects");
-        is(aResponse.appId, appId, "Got same app id");
+        is(aResponse.appId, appId, "Got same app id: " + appId);
         if ("error" in aResponse) {
           ok(false, "Error: " + aResponse.error);
         }
