Revert "debug redirects"
This reverts commit 0d99ed69de8a4d0e6ff4b9e457398cbc8e912ef4.

--- a/devtools/shared/apps/tests/test_webapps_actor.html
+++ b/devtools/shared/apps/tests/test_webapps_actor.html
@@ -322,7 +322,7 @@ var steps = [
     installTestApp(url, appId,
       function (aResponse, aApp) {
         ok(true, "Installed redirects");
-        is(aResponse.appId, appId, "Got same app id: " + appId);
+        is(aResponse.appId, appId, "Got same app id");
         if ("error" in aResponse) {
           ok(false, "Error: " + aResponse.error);
         }
